Add speaker mode plugin

--- a/modules/talk/slides/index.html
+++ b/modules/talk/slides/index.html
@@ -25,10 +25,11 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/4.3.1/reveal.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/4.3.1/plugin/markdown/markdown.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/4.3.1/plugin/highlight/highlight.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/4.3.1/plugin/notes/notes.min.js"></script>
   <script>Reveal.initialize(
       {
         hash: true,
-        plugins: [RevealMarkdown, RevealHighlight],
+        plugins: [RevealMarkdown, RevealHighlight, RevealNotes],
         slideNumber: 'c/t',
         showSlideNumber: 'speaker'
       });</script>
